<resources>
    <string name="app_name">Loan Calculator</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="home_value">Home Value</string>
    <string  name="down_payment">Down Payment</string>
    <string name="apr">APR</string>
    <string name="terms">Terms</string>
    <string name="tax_rate">Tax Rate</string>

    <string-array name="terms_array">
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>40</item>
    </string-array>

    <string name="total_tax_paid">Total Tax Paid</string>
    <string  name="total_interest_paid">Total Interest Paid</string>
    <string name="monthly_payment">Monthly Payment</string>
    <string name="pay_off_date">Pay off date</string>
    <string name="payment">Payment</string>
</resources>
